Improve readability: Collections.singletonMap -> Map.of; Collections.singletonList -> List.of